--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <!---Titulo da Pagina -->
         <div class = "Titulo_Pagina">
-          <img src="file:///home/megas/Documentos/Programas/GitHub/LinearSystemByGauss-master/Site/Media/Title.png ">
+          <img src="https://github.com/JoinScript/JoinScript.github.io/blob/master/Title.png ">
         </div>
 
 
