--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>JoinScriptTeam WebSite</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://github.com/JoinScript/JoinScript.github.io/blob/master/index.css'
+    <link href='JoinScript.github.io/index.css'
           rel='stylesheet'
           type='text/css'>
 
